20130519 Makefile.am,hacking/Makefile.am,sound/Makefile.am,ui/wii/Makefile.am:
         distribute PORTING,hacking/valgrind.supp,sound/wiisound.c,
         ui/wii/wiimouse.h (Stuart).
20130526 Makefile.am,ui/win32/installer/fuse.nsi.in: distribute ChangeLog and
         build notes in Windows packages (Sergio).
20130527 pokefinder/pokemem.c: fix crash when opening a file without extension
         (patch #312) (UB880D and Sergio).
20130531 man/fuse.1: correct Spectranet initialisation script (thanks, Guesser)
         (Fred).
20130531 man/fuse.1: add missing documentation (fixes bug #282) (Stuart).
20130531 ui/win32/installer/fuse.nsi.in: adding Fuse to the OpenWith list for
         file extensions could result in a true association under some
         circumstances on Windows 7 (thanks, Alessandro Grussu) (Sergio).
20130603 sound/aosound.c: remove warnings (mostly patch #313) (Rene Ladan).
20130603 ui/widget/menu.c: (bodge) fix warning.
20130605 roms/se-1.rom: fix save tape traps with SE ROM (Andrew Owen and Fred).
20130617 fuse.c: don't ignore the return code from setuid() (Sergio).
20130706 configure.ac: fix condition used in --with-desktop-dir option
         (thanks, wiz) (Sergio).
20130707 ui/gtk/gtkjoystick.c: fix uninitialised keyboard button settings (fixes
         bug #314) (UB880D).
20130715 man/fuse.1: document IF token for conditional expressions in debugger
         section (thanks, TK90XFan) (Sergio).
20130722 ui/win32/win32ui.c: fix pause when minimising Fuse on Windows (fixes
         bug #298) (Sergio).
20130722 peripherals/disk/disk.c: fix disk image corruption after saving UDI
         files (fixes bug #299) (Sergio).
20130819 peripherals/disk/fdd.c: check ready status after loading a disk into
         floppy disk drive (fixes bug #223) (thanks, John Elliott) (Sergio).
20130820 peripherals/disk/upd_fdc.[c|h]: fix overlapped SEEK commands (fixes bug
         #236) (thanks, Fred) (Sergio).