@@ -4541,3 +4541,5 @@
          floppy disk drive (fixes bug #223) (thanks, John Elliott) (Sergio).
 20130820 peripherals/disk/upd_fdc.[c|h]: fix overlapped SEEK commands (fixes bug
          #236) (thanks, Fred) (Sergio).
+20130820 machines/specplus3.c: Look port 1FFDh if paging is disabled (fixes bug
+         #265) (Brian Ruthven and Fred).
